--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,7 +56,7 @@ repos:
         args: [--silent, -E, fix_docstrings]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.23.3
+    rev: v2.37.2
     hooks:
       - id: pyupgrade
         name: Rewrite Code to be Py3.6+
@@ -75,19 +75,19 @@ repos:
         exclude: src/saltext/cloudflare_tunnel/version.py
 
   - repo: https://github.com/psf/black
-    rev: 21.7b0
+    rev: 22.6.0
     hooks:
       - id: black
         args: [-l 100]
         exclude: src/saltext/cloudflare_tunnel/version.py
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+    rev: v1.12.1
     hooks:
       - id: blacken-docs
         args: [--skip-errors]
         files: ^(docs/.*\.rst|src/saltext/cloudflare_tunnel/.*\.py)$
-        additional_dependencies: [black==21.7b0]
+        additional_dependencies: [black==22.6.0]
   # <---- Formatting -----------------------------------------------------------------------------
 
   # ----- Security ------------------------------------------------------------------------------>
