Move things to utility module
Move cloudflare python calls to their own utils file for easier unit testing of module

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ setup_requires =
   setuptools-declarative-requirements
 install_requires =
   salt>=3003
+  cloudflare
   # Add other module install requirements above this line
 
 [options.packages.find]
