Working on getting all linting working properly

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,9 +67,9 @@ tests =
   pytest==6.2.4
   pytest-salt-factories==1.0.0rc21
 dev =
-  nox==2021.6.12
+  nox
   pre-commit==2.13.0
-  pylint
+  pylint==2.13.9
   SaltPyLint
 docs =
   sphinx
