--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,12 +2,6 @@
 name: Deploy static content to Pages
 
 on:
-  workflow_run:
-    workflows: ["Testing"]
-    branches: [main]
-    types: 
-      - completed
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -29,16 +23,41 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set up Python 3.7 For Nox
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+
+      - name: Install Nox
+        run: |
+          python -m pip install --upgrade pip
+          pip install nox
+
+      - name: Install Doc Requirements
+        run: |
+          nox --force-color -e docs --install-only
+
+      - name: Build Docs
+        env:
+          SKIP_REQUIREMENTS_INSTALL: YES
+        run: |
+          nox --force-color -e docs
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: 'docs/_build/html'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
