--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 
 name: Testing
 
-on: [workflow_dispatch] #push, pull_request]
+on: [workflow_dispatch, push, pull_request]
 
 jobs:
   Pre-Commit:
