--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -198,6 +198,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Download libeay32.dll
+      run: |
+        export PY_LOC=$(which python.exe)
+        echo ${PY_LOC}
+        export PY_DIR=$(dirname ${PY_LOC})
+        echo ${PY_DIR}
+        curl https://repo.saltproject.io/windows/dependencies/64/libeay32.dll --output ${PY_DIR}/libeay32.dll
+        ls -l ${PY_DIR}
+      shell: bash
+
     - name: Install Nox
       run: |
         python -m pip install --upgrade pip
